--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .navbar a img {
-    max-height: 10vh;
+    height: 10vh;
 }
 
 .navbar .home:hover {
@@ -51,16 +51,16 @@ body {
 }
 
 .discord img {
-    max-height: 5vh!important;
+    height: 5vh!important;
     padding-top: 2.5vh;
 }
 
 .insta img { 
-    max-height: 5vh!important;
+    height: 5vh!important;
     padding-top: 2.5vh;
 }
 
 .email img {
-    max-height: 5vh!important;
+    height: 5vh!important;
     padding-top: 2.5vh;
 }
