--- a/public/style.css
+++ b/public/style.css
@@ -18,9 +18,10 @@ body {
     height: 70px;
     display: flex;
     align-items: center;
+    user-select: none!important;
 }
 
-.navbar a {
+.navbar a, .navbar p {
     color: #ffffff;
     text-decoration: none;
     font-size: 20px;
@@ -30,7 +31,7 @@ body {
     line-height: 70px;
 }
 
-.navbar a:hover {
+.navbar a:hover, .navbar p:hover {
     background-color: #617e3e;
 }
 
@@ -63,4 +64,53 @@ body {
 .email img {
     height: 35px!important;
     padding-top: 17.5px;
+}
+
+#copyemailprompt {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    background-color: #ffffff50;
+    backdrop-filter: blur(3px);
+    align-items: center;
+}
+
+#copyemailpopup {
+    width: 200px;
+    background-color: #d7eca6;
+    color: #1f3d2b;
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
+    border-radius: 8px;
+    border-width: 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+*:focus {
+    outline: none;
+}
+
+#copyemailpopup button {
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #83a050;
+    padding: 5px;
+    border-radius: 4px;
+    border-width: 0;
+    cursor: pointer;
+}
+
+#copyemailpopup button:hover {
+    background-color: #617e3e;
+}
+
+#copyemailpopup p {
+    margin: 0px;
+}
+
+br {
+    user-select: none;
 }
