--- a/public/style.css
+++ b/public/style.css
@@ -180,6 +180,7 @@ hr {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30vh;
 }
 
 .heading, .paragraph {
@@ -189,4 +190,24 @@ hr {
     width: 80%;
     margin-top: 1em;
     margin-bottom: 0.5em;
+}
+
+.stat-table {
+    border-width: 0;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+}
+
+.stat-table th {
+    color: #7f9b4e;
+    font-size: 20px;
+}
+
+.stat-table td {
+    font-size: 15px;
+}
+
+.stat-table col {
+    width: 33%;
 }
