--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,7 @@ body {
     background-color: #ffffff50;
     backdrop-filter: blur(3px);
     align-items: center;
+    z-index: 2000;
 }
 
 #copyemailpopup {
