--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
-<BaseLayout title="Page Not Found - PeachTree Math Circle" hideChrome={true}>
+<BaseLayout title="Page Not Found - PeachTree Math Circle">
   <main class="page empty-page">
     <div>
       <h1>404</h1>
